loco-gen/tests/templates/snapshots/generate[controller_file]@scheduler.snap
---
source: loco-gen/tests/templates/scheduler.rs
expression: "fs::read_to_string(tree_fs.root.join(\"config\").join(\"scheduler.yaml\")).expect(\"Failed to read the scheduler.yaml\")"
---
output: stdout
jobs:
  write_content:
      shell: true
      run: "echo loco >> ./scheduler.txt"
      schedule: run every 1 second
      # schedule: "* * * * * * *"
      output: silent
      tags: ['base', 'infra']

  # run_task:
  #     run: "foo"
  #     schedule: "at 10:00 am"
