loco-gen/tests/templates/snapshots/generate[mailer_mod_rs]@mailer.snap
---
source: loco-gen/tests/templates/mailer.rs
expression: "fs::read_to_string(path).unwrap_or_else(|_| panic!(\"{name} missing\"))"
---
#![allow(non_upper_case_globals)]

use loco_rs::prelude::*;
use serde_json::json;

static welcome: Dir<'_> = include_dir!("src/mailers/reset_password/welcome");

#[allow(clippy::module_name_repetitions)]
pub struct ResetPassword {}
impl Mailer for ResetPassword {}
impl ResetPassword {
    /// Send an email
    ///
    /// # Errors
    /// When email sending is failed
    pub async fn send_welcome(ctx: &AppContext, to: &str, msg: &str) -> Result<()> {
        Self::mail_template(
            ctx,
            &welcome,
            mailer::Args {
                to: to.to_string(),
                locals: json!({
                  "message": msg,
                  "domain": ctx.config.server.full_url()
                }),
                ..Default::default()
            },
        )
        .await?;

        Ok(())
    }
}
